--- a/package.json
+++ b/package.json
@@ -3,5 +3,25 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "serverless-http": "^3.2.0"
-  }
+  },
+  "name": "zaknode",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "build": "webpack --config webpack.config.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zakie2003/zaknode.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zakie2003/zaknode/issues"
+  },
+  "homepage": "https://github.com/zakie2003/zaknode#readme",
+  "description": ""
 }
